# Cambio_formato_PDI

FaceRecognition_PCA/: .gitignore  README.md  prepare_selfies.py  prepare_selfies_v2.py
FaceRecognition_PCA/FRG/: CMakeLists.txt  FaceDetector.cpp  FaceDetector.h  ReadFile.h  WriteTrainData.cpp  main.cpp
FaceRecognition_PCA/android-app/: settings.gradle.kts
FaceRecognition_PCA/android-app/app/: build.gradle.kts
FaceRecognition_PCA/android-app/app/src/main/: AndroidManifest.xml
FaceRecognition_PCA/android-app/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
FaceRecognition_PCA/android-app/app/src/main/java/com/example/facerecognition/: FaceOverlayView.kt  MainActivity.kt  PcaRecognizer.kt
FaceRecognition_PCA/android-app/app/src/main/res/layout/: activity_main.xml
FaceRecognition_PCA/android-app/gradle/: libs.versions.toml
FaceRecognition_PCA/android-app/gradle/wrapper/: gradle-wrapper.properties
